@@ -113,9 +113,6 @@ MSWindowsScreenSaver::enable()
     if (m_wasSecure) {
         setSecure(true, m_wasSecureAnInt);
     }
-
-    // restore display power down
-    ArchMiscWindows::removeBusyState(ArchMiscWindows::kDISPLAY);
 }
 
 void
@@ -129,9 +126,6 @@ MSWindowsScreenSaver::disable()
     if (m_wasSecure) {
         setSecure(false, m_wasSecureAnInt);
     }
-
-    // disable display power down
-    ArchMiscWindows::addBusyState(ArchMiscWindows::kDISPLAY);
 }
 
 void
@@ -148,9 +142,6 @@ MSWindowsScreenSaver::activate()
             // no foreground window.  pretend we got the event instead.
             DefWindowProc(NULL, WM_SYSCOMMAND, SC_SCREENSAVE, 0);
         }
-
-        // restore power save when screen saver activates
-        ArchMiscWindows::removeBusyState(ArchMiscWindows::kDISPLAY);
     }
 }
 
@@ -188,9 +179,6 @@ MSWindowsScreenSaver::deactivate()
                                 !m_wasEnabled, 0, SPIF_SENDWININICHANGE);
     SystemParametersInfo(SPI_SETSCREENSAVEACTIVE,
                                  m_wasEnabled, 0, SPIF_SENDWININICHANGE);
-
-    // disable display power down
-    ArchMiscWindows::removeBusyState(ArchMiscWindows::kDISPLAY);
 }
 
 bool
